--- a/cloud-formation-template/gocd-ec2-instance.yml
+++ b/cloud-formation-template/gocd-ec2-instance.yml
@@ -2,28 +2,38 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Creates the GOCD EC2 instance. This assumes a default VPC present with public subnets.
 
 Parameters:
-  security-key-name:
+  securityKeyName:
     Type: String
     Description: The SSH key name
+  tagName:
+    Type: String
+    Description: The training session name such as bootcampFeb2018 or extendedPaatshalaMarch2018  
 
 Mappings:
-  amiMap:
-    regionWise:
-      us-east-1: ami-97785bed
-      us-east-2: ami-f63b1193
-      us-west-2: ami-f2d3638a
-      us-west-1: ami-824c4ee2
-      ap-southeast-1: ami-68097514
-      ap-southeast-2: ami-942dd1f6
-      ap-south-1: ami-531a4c3c
-      cn-north-1: ami-cb19c4a6
+  regionMap:
+      "us-east-1": 
+        AMI: "ami-97785bed"
+      "us-east-2": 
+        AMI: "ami-f63b1193"
+      "us-west-2": 
+        AMI: "ami-f2d3638a"
+      "us-west-1": 
+        AMI: "ami-824c4ee2"
+      "ap-southeast-1": 
+        AMI: "ami-68097514"
+      "ap-southeast-2": 
+        AMI: "ami-942dd1f6"
+      "ap-south-1": 
+        AMI: "ami-531a4c3c"
+      "cn-north-1": 
+        AMI: "ami-cb19c4a6"
 
 
 Resources:
   SecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
-      GroupName: GOCD-Box-SecurityGroup
+      GroupName: !Join [ "-", [ "GOCD-Box-SecurityGroup", Ref: tagName ] ]
       GroupDescription: Allows SSH and 8154 port access to the GOCD box from the world.
       SecurityGroupIngress:
       - IpProtocol: tcp
@@ -38,27 +48,35 @@ Resources:
   EC2:
     Type: AWS::EC2::Instance
     Properties:
-      KeyName: !Ref security-key-name
-      ImageId: !FindInMap [amiMap, regionWise, !Ref "AWS::Region"]
-      #need to change the below to a m5.large
-      InstanceType: t2.micro
+      KeyName: !Ref securityKeyName
+      ImageId: !FindInMap [regionMap, !Ref "AWS::Region", AMI]
+      #todo: need to change the below to a m5.large
+      InstanceType: m5.large
       SecurityGroups:
         - !Ref SecurityGroup
       UserData:
         Fn::Base64:                               
           !Sub |
               #!/bin/bash -ex
-              yum update
+              yum update -y
               yum install -y docker
               usermod -a -G docker ec2-user
               curl -L https://github.com/docker/compose/releases/download/1.9.0/docker-compose-`uname -s`-`uname -m` | sudo tee /usr/local/bin/docker-compose > /dev/null
               chmod +x /usr/local/bin/docker-compose
               service docker start
               chkconfig docker on
-              
+              curl https://raw.githubusercontent.com/Sethuraman/bootcamp-gocdinfra/master/docker/docker-compose.yml > docker-compose.yml
+              /usr/local/bin/docker-compose up -d
+              mkdir -p /.ssh && ssh-keygen -f /.ssh/id_rsa -t rsa -N '' && chown -R 1000:1000 /.ssh
+              ssh-keyscan -t rsa github.com >> /.ssh/known_hosts
+
+      Tags:
+        - Key: Team
+          Value: !Ref tagName     
   EBS:
     Type: AWS::EC2::Volume
     Properties:
+      #todo: need to make this higher
       Size: 8
       AvailabilityZone: !GetAtt EC2.AvailabilityZone
 
