Sethu | updated the node to jdk 10

--- a/docker/agent/Dockerfile
+++ b/docker/agent/Dockerfile
@@ -1,12 +1,14 @@
 FROM gocd/gocd-agent-debian-8:v17.12.0
 
-ARG NODE_VERSION=9.4.0
+ARG NODE_VERSION=10.1.0
 
 WORKDIR /opt/
 ADD https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.xz node-v$NODE_VERSION-linux-x64.tar.xz
 
 RUN apt update && \
-    apt install --yes openjdk-8-jdk openjfx && \
+    mkdir -p /tmp/jdk && \
+    curl https://download.java.net/java/GA/jdk10/10.0.1/fb4372174a714e6b8c52526dc134031e/10/openjdk-10.0.1_linux-x64_bin.tar.gz > /tmp/jdk/jdk10.tar.gz && \
+    mkdir -p /usr/java && tar xvf /tmp/jdk/jdk10.tar.gz -C /usr/java/ && \
     apt install apt-transport-https && \
     curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
@@ -25,7 +27,9 @@ RUN apt update && \
     curl -L https://github.com/docker/compose/releases/download/1.18.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 
-ENV PATH="/opt/node-v9.4.0-linux-x64/bin/:${PATH}"
+ENV PATH="/opt/node-v${NODE_VERSION}-linux-x64/bin/:/${PATH}"
+ENV JAVA_HOME="/usr/java/jdk-10.0.1"
+
 
 RUN npm install \
     cfn-create-or-update@1.1.2 \
